@@ -735,6 +735,30 @@ public class View extends JFrame implements EBComponent
 		editPane.setBuffer(buffer);
 	} //}}}
 
+	//{{{ goToBuffer() method
+	/**
+	 * If this buffer is open in one of the view's edit panes, sets focus
+	 * to that edit pane. Otherwise, opens the buffer in the currently
+	 * active edit pane.
+	 * @param buffer The buffer
+	 * @since jEdit 4.2pre1
+	 */
+	public EditPane goToBuffer(Buffer buffer)
+	{
+		EditPane[] editPanes = getEditPanes();
+		for(int i = 0; i < editPanes.length; i++)
+		{
+			EditPane ep = editPanes[i];
+			if(ep.getBuffer() == buffer)
+			{
+				ep.focusOnTextArea();
+				return ep;
+			}
+		}
+		setBuffer(buffer);
+		return editPane;
+	} //}}}
+
 	//{{{ getTextArea() method
 	/**
 	 * Returns the current edit pane's text area.
